--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ function startGame() {
     child.parentNode.removeChild(child);
     });
     startTimer();
+    timeLeft = 10;
   console.log("Game started.");
   keydownHandler = function(event) {
     checkKey(event.key);
@@ -109,6 +110,7 @@ function checkKey(key){
 
 function endGame() {
     isGameActive = false;
+    stopTimer();
   //clean vars
   keysArray = [];
   divArray = [];
@@ -120,6 +122,7 @@ function endGame() {
   }
 }
 function failCondition(){
+    stopTimer();
     isGameActive = false;
   //clean vars
   keysArray = [];
@@ -146,21 +149,34 @@ for (let i = 0; i < 15; i++) {
 }
 let timeLeft = 10; // in seconds
     const progressBar = document.getElementById('timer');
+    let timerInterval;
 
     function updateTimer() {
         progressBar.value = (timeLeft / 10) * 100; // Adjust max value if you change the timeLeft
     }
 
     function startTimer() {
-        const timerInterval = setInterval(() => {
+        timerInterval = setInterval(() => {
             if (timeLeft > 0) {
                 timeLeft--;
                 updateTimer();
             } else {
-                clearInterval(timerInterval);
-                failCondition(); // You can do something else here when the timer hits 0
+                (timerInterval);
             }
         }, 1000); // Update every 1 second
     }
+
+    // Call this function when you want to stop the timer
+    function stopTimer() {
+        clearInterval(timerInterval);
+        console.log("timer stopped.")
+    }
+
+    startTimer(); // Call this to start the timer
+
+    // Example: Stop the timer after 5 seconds (5000 milliseconds)
+    setTimeout(() => {
+        stopTimer();
+    }, 5000);
 document.getElementById('startGame_button').addEventListener('click', startGame);
 </script>
