--- a/index.html
+++ b/index.html
@@ -1,182 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NoPixel KFR Minigame</title>
-    <link rel="stylesheet" type="text/css" href="minigame.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <h1 id="title">NoPixel 4.0 KFR Minigame</h1>
-    <h2 id="subtitle">Made by DylanBBK</h2>
-<div id="numberContainer">
-    <table style="padding-bottom:10px; text-wrap: nowrap;">
-        <td id="glowText_green">Alphabet</td>
-        <td id="glowText_white">Tap the letters in order</td>
-        
-        <td style="width:100%; margin:auto"></td>
-    </table>
-<div class="layout" id="layout">
-    
-</div>
-<div id="failBox">Failed!</div>
-<div class="w3-light-grey" style="width:100%">
-<progress id="timer" style='width:100%' value="100" max="100"></progress>  
-</div>
-  </div>
-
-  <div style="text-align:center; margin-top:100px;"><button id="startGame_button">start game</button></div>
-  <div style="text-align:center; margin-top:20px" id="glowText_white">Click once - then "Enter" to restart.</div>
-  </body>
-
-<script>
-let isGameActive = false;
-let keydownHandler = null; // To keep a reference to the event listener function
-let keysArray = [];
-let divArray = [];
-let randomKeys = [];
-const parentDiv = document.getElementById('layout');
-
-console.log(randomKeys);
-
-function startGame() {
-    if(isGameActive){
-        return;
-    }
-  isGameActive = true;
-  //Clean variables
-  keysArray = [];
-  divArray = [];
-  randomKeys = [];
-  document.getElementById('failBox').style = 'visibility: collapsed;';
-  randomKeys = generateRandomKeysArray();
-  
-  var numberContainer = document.getElementById('numberContainer');
-
-    // Get all children with a certain class
-    var childrenWithClass = numberContainer.querySelectorAll('.deleteableDiv');
-
-    // Remove each child
-    childrenWithClass.forEach(function(child) {
-    child.parentNode.removeChild(child);
-    });
-    startTimer();
-    timeLeft = 10;
-  console.log("Game started.");
-  keydownHandler = function(event) {
-    checkKey(event.key);
-    if (event.key === 'Enter') {
-    }
-  };
-  document.addEventListener('keydown', keydownHandler);
-
-  keysArray.forEach(function(item, index) {
-    const newDiv = document.createElement('div');
-    console.log(`Item at index ${index}: ${item}`);
-    parentDiv.appendChild(newDiv);
-    newDiv.id = "numberBox";
-    newDiv.className = 'deleteableDiv';
-    newDiv.innerHTML = item;
-    divArray.push(newDiv);
-
-  
-});
-}
-
-function checkKey(key){
-    key = key.toUpperCase();
-    console.log("Key Wanted: " + keysArray[0] + " | Key Pressed: " + key);
-    if(keysArray[0] == key){
-        console.log("Correct");
-        keysArray.shift();
-        divArray[0].id = 'numberContainerCorrect';
-        divArray.shift();
-        if(keysArray.length == 0){
-            endGame()
-        }
-    }else{
-        divArray[0].id = 'numberContainerFail';
-        divArray.shift();
-        document.getElementById('failBox').style = 'visibility: visible;';
-        keysArray = [];
-        newDiv = [];
-        console.log("Incorrect - Game ended");
-        endGame();
-    }
-}
-
-function endGame() {
-    isGameActive = false;
-    stopTimer();
-  //clean vars
-  keysArray = [];
-  divArray = [];
-  randomKeys = [];
-  console.log("Game ended.");
-  if (keydownHandler !== null) {
-    document.removeEventListener('keydown', keydownHandler);
-    keydownHandler = null; // Reset the reference
-  }
-}
-function failCondition(){
-    stopTimer();
-    isGameActive = false;
-  //clean vars
-  keysArray = [];
-  divArray = [];
-  randomKeys = [];
-  document.getElementById('failBox').style = 'visibility: visible;';
-  console.log("Game ended.");
-  if (keydownHandler !== null) {
-    document.removeEventListener('keydown', keydownHandler);
-    keydownHandler = null; // Reset the reference
-  }
-}
-function generateRandomKey() {
-    const characters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-    const randomIndex = Math.floor(Math.random() * characters.length);
-    return characters.charAt(randomIndex);
-}
-
-function generateRandomKeysArray() {
-for (let i = 0; i < 15; i++) {
-    keysArray.push(generateRandomKey());
-}
-    return keysArray;
-}
-let timeLeft = 10; // in seconds
-    const progressBar = document.getElementById('timer');
-    let timerInterval;
-
-    function updateTimer() {
-        progressBar.value = (timeLeft / 10) * 100; // Adjust max value if you change the timeLeft
-    }
-
-    function startTimer() {
-        timerInterval = setInterval(() => {
-            if (timeLeft > 0) {
-                timeLeft--;
-                updateTimer();
-            } else {
-                (timerInterval);
-            }
-        }, 1000); // Update every 1 second
-    }
-
-    // Call this function when you want to stop the timer
-    function stopTimer() {
-        clearInterval(timerInterval);
-        console.log("timer stopped.")
-    }
-
-    startTimer(); // Call this to start the timer
-
-    // Example: Stop the timer after 5 seconds (5000 milliseconds)
-    setTimeout(() => {
-        stopTimer();
-    }, 5000);
-document.getElementById('startGame_button').addEventListener('click', startGame);
-</script>
+<a>nothing is here fam</a>
