--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<a>nothing is here fam</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Your Awesome Page</title>
+</head>
+<body>
+    <style>
+    </style>
+
+    <div style="line-height:100%; padding-top:50%; text-align: center;">
+        <a style="font-size:50px;">😎</a>
+    </div>
+</body>
