--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
     </style>
 
-    <div style="line-height:100%; padding-top:50%; text-align: center;">
+    <div style="line-height:100%; padding-top:50vh; text-align: center;">
         <a style="font-size:50px;">😎</a>
     </div>
 </body>
