--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/buildsWebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/buildsWebGL.data.br",
-        frameworkUrl: buildUrl + "/buildsWebGL.framework.js.br",
-        codeUrl: buildUrl + "/buildsWebGL.wasm.br",
+        dataUrl: buildUrl + "/buildsWebGL.data.gz",
+        frameworkUrl: buildUrl + "/buildsWebGL.framework.js.gz",
+        codeUrl: buildUrl + "/buildsWebGL.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "embeddedTest",
