--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/buildsWebGL.data",
-        frameworkUrl: "Build/buildsWebGL.framework.js",
-        codeUrl: "Build/buildsWebGL.wasm",
+        dataUrl: "Build/buildsWebGL.data.br",
+        frameworkUrl: "Build/buildsWebGL.framework.js.br",
+        codeUrl: "Build/buildsWebGL.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "embeddedTest",
